deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jos-deploy-backend
  labels:
    app: jos-deploy-backend
  namespace: joiningos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jos-deploy-backend
  template:
    metadata:
      labels:
        app: jos-deploy-backend
    spec:
      serviceAccountName: jos-deploy-backend-sa
      containers:
        - name: jos-deploy-backend
          image: harbor.joiningos.com/library/jos-deploy:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 8080 # REST API 网关端口
            - containerPort: 50051 # gRPC 端口
          volumeMounts:
            - mountPath: /opt/helm/repositories.yaml
              name: deploy-config-map
              subPath: repositories.yaml
      volumes:
      - configMap:
          defaultMode: 420
          name: internal-harbor-config
        name: deploy-config-map
---
apiVersion: v1
kind: Service
metadata:
  name: jos-deploy-backend
  namespace: joiningos
spec:
  selector:
    app: jos-deploy-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: grpc
      port: 50051
      targetPort: 50051
